--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="animate__animated">
-        <h2>My Portfolio</h2>
+        <h2>My Projects</h2>
         <div class="portfolio-container">
             <!-- Project 1 -->
             <div class="project-card animate__animated">
